<resources>
    <string name="enter_name">Full Name</string>
    <string name="already_have_code"><u>Already have an activation code?</u></string>
    <string name="change_phone_number">Change phone number</string>
    <string name="deactivate_account">Deactivate account</string>
    <string name="tip_delivery_time">Tap if you\'d like to specify the time.</string>
    <string name="tip_add_location">Tap to add a new location</string>
    <string name="tip_select_location">Tap to select a delivery location.</string>
    <string name="tip_search_location">Search on google or just move the map to your desired location.</string>
    <string name="addCreditCard">Add Credit Card</string>
    <string name="tip_location_far">Is this the correct address? You seem far away!</string>
    <string name="tip_location_modified">We\'ve updated your current address according to your location.</string>
    <string name="tip_location_not_found">Is this the correct address? We are unable to fetch your current location.</string>
    <string name="tip_favorites">Add this product to your favorites</string>
    <string name="tip_favorites_view">Access your favorite products</string>
    <string name="unknown_location">Pick a location</string>
    <string name="fetching_location">Fetching location</string>
    <string name="delivery_address">DELIVERY</string>
    <string name="delivery_within"> </string>
    <string name="current_location">Current Location</string>
    <string name="curr_location">current location</string>
    <string name="exit_on_double_click">Press back one more time to exit!</string>
    <string name="search_shops_and_products">Search for shops and products…</string>
    <string name="search_brands_and_products">Search for products and brands…</string>
    <string name="my_wallet">Wallet</string>
    <string name="previous_orders">Order history</string>
    <string name="my_addresses">My addresses</string>
    <string name="payment_methods">Payment methods</string>
    <string name="more_settings">More settings</string>
    <string name="logout">Logout</string>
    <string name="testing">Testing</string>
    <string name="update_pin">Update Pin</string>
    <string name="rate_restaurant">Rate Restaurant</string>
    <string name="give_us_some_feedback">Give us some feedback!</string>
    <string name="order_submitted">Order Submitted</string>
    <string name="confirmed_by_store">Confirmed by store</string>
    <string name="status_pickup">Pickup</string>
    <string name="status_delivery">Delivery</string>
    <string name="status_pending">Pending</string>
    <string name="status_return">Return</string>
    <string name="status_canceled">Canceled</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="driver">Driver</string>
    <string name="contact_us">Contact us</string>
    <string name="add_new">Add New</string>
    <string name="add_first_address">Add your first address</string>
    <string name="new_address">New Address</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="gender">Gender</string>
    <string name="male_female">Male/Female</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="send_feedback">Send feedback</string>
    <string name="share_the_app">Share the app</string>
    <string name="faq">FAQ</string>
    <string name="privacy_and_terms">Privacy and terms</string>
    <string name="settings">Settings</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="change_location">Change Location</string>
    <string name="header_available_areas">Available areas</string>
    <string name="hint_search_shops_products">Search for shops and products…</string>
    <string name="title_my_favorites">My Favorites</string>
    <string name="empty_favourites_descr">Your favorite products will show up here.</string>
    <string name="title_sign_in">Please sign in</string>
    <string name="sign_in_description">You must sign in before proceeding.</string>
    <string name="sign_in_yes">Sign in</string>
    <string name="sign_in_cancel">Cancel</string>
    <string name="we_sent_verification_code">We sent you a 5-digit code through SMS, Please enter it below.</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_enter_your_email">Enter your email</string>
    <string name="activation_code">Activation code</string>
    <string name="next">Next</string>
    <string name="hint_enter_your_full_name">Enter your Full name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_my_profile">MY PROFILE</string>
    <string name="title_country_code">Country Code</string>
    <string name="msg_select_country_code">Please select a country code!</string>
    <string name="msg_enter_phone_number">Please enter your phone number.</string>
    <string name="title_code_not_received">Code not received?</string>
    <string name="msg_delay_issue">The delay is usually due to your mobile operator. Please send us an email so we could resolve the issue and get you started.</string>
    <string name="text_request_by_mail">Request by Mail</string>
    <string name="i_will_wait">I\'ll Wait.</string>
    <string name="msg_i_didnot_receive_code">I did not receive my activation code</string>
    <string name="prefix_phone">Phone Number: +</string>
    <string name="title_chooser_send_mail">Send mail…</string>
    <string name="msg_no_mail_installed">There are no email clients installed.</string>
    <string name="error_enter_phone_to_receive_code">Enter your phone number to receive an activation code.</string>
    <string name="msg_i_have_activation_code">Already have an activation code?</string>
    <string name="title_activation">Activation</string>
    <string name="msg_enter_activation_code">Enter your 5-digit activation code.</string>
    <string name="msg_didnot_receive_code">I did not receive the code!</string>
    <string name="msg_enter_details">Please enter your details.</string>
    <string name="title_details">details</string>
    <string name="title_sms_verification">SMS Verification</string>
    <string name="msg_code_will_be_send">An activation code will be sent to</string>
    <string name="msg_pick_atleast_one_item">Please pick at least one item</string>
    <string name="search_products_in">Search for products in</string>
    <string name="order_details">Order Details</string>
    <string name="closed">Closed</string>
    <string name="card_no">CARD #</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="authorization_message_from_bank">You might receive an authorization message of 0.01 USD from your bank.</string>
    <string name="add_card">ADD CARD</string>
    <string name="pin_your_location">Pin your location</string>
    <string name="search_or_move_the_map">Search or move the map</string>
    <string name="choose_a_location">CHOOSE A LOCATION</string>
    <string name="add_location">NEW ADDRESS</string>
    <string name="nickname">Nickname</string>
    <string name="hint_nickname">My house, My office ..</string>
    <string name="area">Address</string>
    <string name="hint_area">Neighborhood</string>
    <string name="building">City</string>
    <string name="hint_building">Building number or name</string>
    <string name="apt_unit">House #</string>
    <string name="hint_app_unit">3rd floor Start</string>
    <string name="more_info">More Info</string>
    <string name="hint_more_info">Provide additional information</string>
    <string name="delete_address">DELETE ADDRESS</string>
    <string name="edit_address">Edit Address</string>
    <string name="select_an_address_name">Select an address name</string>
    <string name="address_details">ADDRESS DETAILS</string>
    <string name="choose_a_date">CHOOSE A DATE</string>
    <string name="my_basket">Your basket</string>
    <string name="special_note">Special note</string>
    <string name="checkout">CHECKOUT</string>
    <string name="pickup_from">Pickup from ?</string>
    <string name="where_to">Where to ?</string>
    <string name="when">Select a desired time…</string>
    <string name="select_a_payment_method">Select a payment method</string>
    <string name="tip_the_driver">Add some tips</string>
    <string name="add_promo_code">ADD PROMO CODE</string>
    <string name="confirm_order">CONFIRM ORDER</string>
    <string name="we_appreciate_ur_feedback">We truly appreciate your feedback!</string>
    <string name="hint_enter_comments">Enter your comments here…</string>
    <string name="submit">SUBMIT</string>
    <string name="open_now">Open Now</string>
    <string name="filters">Filters</string>
    <string name="pending_confirmation">Pending confirmation</string>
    <string name="eta">ETA</string>
    <string name="_20_mins">20 MINS</string>
    <string name="add">ADD</string>
    <string name="order_now">ORDER NOW</string>
    <string name="today">Today</string>
    <string name="home">HOME</string>
    <string name="header">HEADER</string>
    <string name="find_shops_or_products">Find shops or products…</string>
    <string name="missing_items">Missing Items</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">Cancel</string>
    <string name="warning_clear_cart">This will clear your basket. Do you wish to continue?</string>
    <string name="start_a_new_cart">Start a new basket?</string>
    <string name="pick_and_drop"><![CDATA[Pick & Drop]]></string>
    <string name="distance">DISTANCE</string>
    <string name="select_pick_up_location">Select pick-up location</string>
    <string name="select_drop_off_location">Select drop-off location</string>
    <string name="round_trip">Round trip?</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="view_pricing">View Pricing</string>
    <string name="product_details">Product details</string>
    <string name="add_to_basket">ADD TO BASKET</string>
    <string name="view_in_store">VIEW IN STORE</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="apply_promo_code">APPLY PROMO CODE</string>
    <string name="enter_promo_code">Enter promo code</string>
    <string name="hint_enter_promocode">Please enter your promo code below.</string>
    <string name="promo_code">Promo Code</string>
    <string name="next_day">NEXT DAY</string>
    <string name="mon_to_friday">MON TO FRIDAY</string>
    <string name="complete_your_details">COMPLETE YOUR DETAILS</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="title_update_req">Update required!</string>
    <string name="update_required">This app requires an update from the store.</string>
    <string name="closed_on_that_day">Closed on that day!</string>
    <string name="what_time">What time ?</string>
    <string name="choose_date">CHOOSE A DATE</string>
    <string name="send_feeback">Send feedback</string>
    <string name="share">Share</string>
    <string name="failed_update_gender">Failed to update gender</string>
    <string name="try_again">Please try again</string>
    <string name="failed_update_birthday">Failed to update birthday</string>
    <string name="validating_credit_card">Validating credit card…</string>
    <string name="unable_to_save_card_complete_profile">Unable to save credit card. Please complete your profile first</string>
    <string name="unable_to_save_card">Unable to save credit card</string>
    <string name="saving_credit_card">Saving Credit Card…</string>
    <string name="wrong_card_number">Wrong card number</string>
    <string name="address_note_while_servie">Displaying only the addresses within reach of the selected merchant.</string>
</resources>