<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >

    <TextView
        android:id="@+id/titleLabel"
        style="@style/PageTitleBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleHeight"
        android:background="@drawable/gradient_background"
        android:elevation="@dimen/toolbarElevation"
        android:text="@string/complete_your_details" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_below="@id/titleLabel"
        android:layout_marginStart="@dimen/marginNormal"
        android:layout_marginEnd="@dimen/marginNormal"
        android:layout_marginTop="@dimen/marginNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_full_name"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/fullNameField"
                style="@style/Large"
                android:elevation="1dp"
                android:layout_marginTop="@dimen/marginVerySmall"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/formItemHeight"
                android:background="@drawable/rounded_corners_white_10"
                android:gravity="center"
                android:hint="@string/enter_name"
                android:inputType="textPersonName" />


            <TextView
                android:layout_marginTop="@dimen/marginNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_email"
                style="@style/Large"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/emailField"
                style="@style/Large"
                android:elevation="1dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="@dimen/marginVerySmall"
                android:layout_width="match_parent"
                android:layout_height="@dimen/formItemHeight"
                android:background="@drawable/rounded_corners_white_10"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />


            <Button
                android:id="@+id/confirmButton"
                style="@style/PrimaryButton"
                android:layout_marginBottom="20dp"
                android:elevation="1dp"
                android:minWidth="160dp"
                android:layout_marginTop="@dimen/marginBig"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_corners_button"
                android:layout_width="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_alignParentBottom="true"
                android:text="@string/confirm" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
