<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/titleText"
        style="@style/PageTitleBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleHeight"
        android:background="@drawable/gradient_background"
        android:elevation="@dimen/toolbarElevation"
        android:text="@string/edit_profile" />

    <RelativeLayout
        android:layout_below="@id/titleText"
        android:id="@+id/subtitle"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="@dimen/marginSmall"
            android:id="@+id/descriptionText"
            style="@style/BoldFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/we_sent_verification_code"
            android:textSize="16sp" />

        <include
            android:layout_below="@id/descriptionText"
            android:id="@+id/line"
            layout="@layout/comp_line_secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/subtitle"
        android:layout_marginTop="@dimen/marginSmall"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingStart="@dimen/marginNormal"
        android:paddingEnd="@dimen/marginNormal">

        <RelativeLayout
            android:id="@+id/phoneNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginBig"
            android:layout_marginEnd="@dimen/marginBig"
            android:layout_marginTop="@dimen/marginNormal"
            android:clipToPadding="false"
            android:padding="1dp">

            <TextView
                android:id="@+id/countryCodeButton"
                style="@style/Large"
                android:layout_width="70dp"
                android:layout_height="@dimen/formItemHeight"
                android:layout_alignParentStart="true"
                android:background="@drawable/rounded_corners_white_10_left"
                android:gravity="center"
                android:text="+961" />

            <EditText
                android:id="@+id/phoneNumberField"
                style="@style/Large"
                android:layout_width="match_parent"
                android:layout_height="@dimen/formItemHeight"
                android:layout_toEndOf="@+id/countryCodeButton"
                android:background="@drawable/rounded_corners_white_10_right"
                android:gravity="center"
                android:hint="@string/hint_phone_number"
                android:inputType="phone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/formItemHeight"
            android:layout_marginStart="@dimen/marginSmall"
            android:layout_marginEnd="@dimen/marginSmall"
            android:layout_marginTop="@dimen/marginNormal"
            android:background="@drawable/rounded_corners_white_10_top"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <TextView
                style="@style/LabelLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/globalMargin"
                android:layout_marginEnd="@dimen/globalMargin"
                android:lines="1"
                android:text="@string/full_name" />

            <EditText
                android:id="@+id/fullNameField"
                style="@style/Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/labelMargin"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:hint="@string/hint_enter_your_full_name"
                android:lines="1"
                android:textColorHint="@color/editTextHint" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/formItemHeight"
            android:layout_marginStart="@dimen/marginSmall"
            android:layout_marginEnd="@dimen/marginSmall"
            android:background="@drawable/rounded_corners_white_10_top"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <TextView
                style="@style/LabelLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/globalMargin"
                android:layout_marginEnd="@dimen/globalMargin"
                android:lines="1"
                android:text="@string/email" />

            <EditText
                android:id="@+id/emailField"
                style="@style/Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/labelMargin"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:hint="@string/hint_enter_your_email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:textColorHint="@color/editTextHint" />

        </RelativeLayout>

        <EditText
            android:id="@+id/activationCodeField"
            style="@style/Large"
            android:layout_width="match_parent"
            android:layout_height="@dimen/formItemHeight"
            android:layout_marginStart="@dimen/marginNormal"
            android:layout_marginEnd="@dimen/marginNormal"
            android:layout_marginTop="@dimen/marginNormal"
            android:background="@drawable/rounded_corners_white_10"
            android:gravity="center"
            android:hint="@string/activation_code"
            android:inputType="number" />

        <!--<com.facebook.login.widget.LoginButton-->
            <!--android:id="@+id/login_button"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginTop="30dp"-->
            <!--android:layout_marginBottom="30dp" />-->

        <Button
            android:id="@+id/nextButton"
            style="@style/PrimaryButton"
            android:layout_width="140dp"
            android:layout_height="@dimen/buttonHeight"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/marginBig"

            android:text="@string/next" />

        <TextView
            android:id="@+id/bottomText"
            style="@style/ButtonFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/marginSmall"
            android:gravity="center"
            android:paddingBottom="@dimen/marginSmall"
            android:paddingTop="@dimen/marginSmall"
            android:text="@string/already_have_code"
            android:textColor="@color/primaryTextColor" />

    </LinearLayout>

</RelativeLayout>
